modal spacing fixed

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -236,6 +236,7 @@ header {
         .project{
             display: flex;
             justify-content: space-evenly;
+            margin-bottom: 5rem;
             .left-info {
                 width: 350px;
                 height: 250px;
